--- a/0x00-html_advanced/3-index.html
+++ b/0x00-html_advanced/3-index.html
@@ -9,16 +9,16 @@
   <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
-	<header>
-		Header
-	</header>
+  <header>
+    Header
+  </header>
 
-	<main>
-		Main Content
-	</main>	
+  <main>
+    Main content
+  </main>
 
-	<footer>
-		Footer
-	</footer>	
+  <footer>
+    Footer
+  </footer>
 </body>
 </html>
