--- a/0x00-html_advanced/article.html
+++ b/0x00-html_advanced/article.html
@@ -9,18 +9,19 @@
   <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
-        <header>
-                Header
-        </header>
+  <header>
+    Header
+  </header>
 
-        <main>
-		Main Content
-		<aside>
-			Aside
-		</aside>
-        </main>
+  <main>
+    Main content
+    <aside>
+      Aside
+    </aside>
+  </main>
 
-        <footer>
-                Footer
-        </footer>
+  <footer>
+    Footer
+  </footer>
 </body>
+</html>
