--- a/0x00-html_advanced/15-index.html
+++ b/0x00-html_advanced/15-index.html
@@ -1,4 +1,4 @@
-o<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8">
@@ -9,97 +9,95 @@ o<!DOCTYPE html>
   <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
-  <div>
+  <div class="header">
     <header>
       <span>Techium</span>
       <nav></nav>
     </header>
   </div>
 
-  <div>
-    <main>
+  <main>
+    <div class="sections">
       <h1>Homepage</h1>
-      <div>
-        <section>
-          <h2>We help you build your brand!</h2>
-          <p>We work with you</p>
-        </section>
+      <section>
+        <h2>We help you build your brand!</h2>
+        <p>We work with you</p>
+      </section>
 
-        <section>
-          <h2>Services</h2>
-          <h3>Design & Concept</h3>
-          <h3>Digital Strategy</h3>
-          <h3>Content Strategy</h3>
-          <h3>UX Design</h3>
+      <section> 
+        <h2>Services</h2>
+        <h3>Design & Concept</h3>
+        <h3>Digital Strategy</h3>
+        <h3>Content Strategy</h3>
+        <h3>UX Design</h3>
+        <h3>Web Development</h3>
+        <h3>Social Media</h3>
+      </section>
+
+      <section>
+        <h2>Works</h2>
+        <p>Take a look at our portfolio</p>
+        <article>
+          <h3>Interior Design</h3>
+        </article>
+
+        <article>
           <h3>Web Development</h3>
-          <h3>Social Media</h3>
-        </section>
+        </article>
 
-        <section>
-          <h2>Works</h2>
-          <p>Take a look at our portfolio</p>
-          <article>
-            <h3>Interior Design</h3>
-          </article>
+        <article>
+          <h3>Personal Brand</h3>
+        </article>
+      </section>
 
-          <article>
-            <h3>Web Development</h3>
-          </article>
+      <section>
+        <h2>About Us</h2>
+        <p>Everything about us</p>
+        <h3>Who are we</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+        <h3>Our culture</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+        <h3>How we work</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+      </section>
 
-          <article>
-            <h3>Personal Brand</h3>
-          </article>
-        </section>
+      <section>
+        <h2>Latest news</h2>
+        <h3>Hoc loco tenere se Triarius non potuit.</h3>
+        <p>Career</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+        <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
+        <p>Digital Life</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
+        <h3>Bestiarum vero nullum iudicium puto.</h3>
+        <p>Social</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
+      </section>
 
-        <section>
-          <h2>About Us</h2>
-          <p>Everything about us</p>
-          <h3>Who are we</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-          <h3>Our culture</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-          <h3>How we work</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-        </section>
+      <section>
+        <h2>Testimonials</h2>
+        <p>We are more than a digital company</p>
+        <article>
+          Testimonial 1
+        </article>
 
-        <section>
-          <h2>Latest news</h2>
-          <h3>Hoc loco tenere se Triarius non potuit.</h3>
-          <p>Career</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
-          <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
-          <p>Digital Life</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
-          <h3>Bestiarum vero nullum iudicium puto.</h3>
-          <p>Social</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
-        </section>
+        <article>
+          Testimonial 2
+        </article>
 
-        <section>
-          <h2>Testimonials</h2>
-          <p>We are more than a digital company</p>
-          <article>
-            Testimonial 1
-          </article>
+        <article>
+          Testimonial 3
+        </article>
+      </section>
 
-          <article>
-            Testimonial 2
-          </article>
+      <section>
+        <h2>Contact</h2>
+        <p>We like to know new people</p>
+      </section>
+    </div>
+  </main>
 
-          <article>
-            Testimonial 3
-          </article>
-        </section>
-
-        <section>
-          <h2>Contact</h2>
-          <p>We like to know new people</p>
-        </section>
-      </div>
-    </main>
-  </div>
-
-  <div>
+  <div class="footer">
     <footer>
       Footer
     </footer>
